updated wikicommons link on potatoes

--- a/views/layouts/healthy_tips/potatoes.html
+++ b/views/layouts/healthy_tips/potatoes.html
@@ -86,7 +86,7 @@
                 <figcaption class="figure-caption">
                     <small><strong>Figure 2: Sweet Potato</strong> - <em>A nutrient-dense option with a natural sweetness
                             and low glycaemic index.</em></small>
-                            <small><em>By Llez https://commons.wikimedia.org/wiki/File:Ipomoea_batatas_006.JPG</em></small>
+                            <small><em>By <a href=" https://commons.wikimedia.org/wiki/File:Ipomoea_batatas_006.JPG" target="_blank" rel="noopener">Llez</a></em></small>
                 </figcaption>
             </figure>
             <p>
