Added amazon links and chicken drums

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -41,6 +41,11 @@
             <li><a class="dropdown-item" href="/views/layouts/recipes/gluten_free/index_gluten_free.html">Gluten-Free</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/holidays_and_special_occasions/index_holidays_and_special_occasions.html">Holiday & Special Occasions</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/quick_and_easy/index_quick_and_easy.html">Quick & Easy</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/merchandise_links.html"><strong>Amazon Shopping</strong></a>
+            </li>
           </ul>
         </li>
         <!-- Healthy Tips Dropdown -->
