Testing the keep screen awake function

--- a/views/layouts/recipes/recipe_pages/almond_pancakes.html
+++ b/views/layouts/recipes/recipe_pages/almond_pancakes.html
@@ -98,6 +98,10 @@
             <h3>Nutritional Information</h3>
             <ul class="list-unstyled" id="nutrition"></ul>
         </section>
+
+        <section>
+            <button id="wake-lock-toggle" onclick="toggleWakeLock()">Keep Screen Awake</button>
+        </section>
     </main>
 
     <!-- Include footer -->
