--- a/views/layouts/recipes/recipe_pages/cocoa_peanut_butter_chocolate.html
+++ b/views/layouts/recipes/recipe_pages/cocoa_peanut_butter_chocolate.html
@@ -78,6 +78,12 @@
                             <li><strong>Cook Time:</strong> <span id="cook-time"></span></li>
                             <li><strong>Total Time:</strong> <span id="total-time"></span></li>
                             <li><strong>Servings:</strong> <span id="servings"></span></li>
+                            <li class="mt-2">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="wake-lock-toggle" onchange="toggleWakeLock()">
+                                    <label class="form-check-label" for="wake-lock-toggle" id="wake-lock-label">Keep Screen Awake</label>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
