--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -92,31 +92,55 @@
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 
-      <!-- Social Media Icons -->
-      <div class="social-icons ms-auto">
-        <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" rel="noopener" class="social-icon mx-2">
+      <!-- Social Media Icons with Dropdown -->
+      <div class="social-icons ms-auto d-none d-lg-flex"> <!-- Existing section for larger screens -->
+        <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" rel="noopener"
+          class="social-icon mx-2">
           <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
         </a>
         <a href="https://www.instagram.com/trnsc.health/" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
         </a>
         <a href="https://www.threads.net/@trnsc.health" target="_blank" rel="noopener" class="social-icon mx-2">
-          <img src="/public/images/icons/threads-logo-black.svg" alt="Twitter (X)" width="24" height="24" />
+          <img src="/public/images/icons/threads-logo-black.svg" alt="Threads" width="24" height="24" />
         </a>
         <a href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
         </a>
       </div>
-
-      <!-- Donation Buttons -->
-      <div class="donation-buttons ms-auto">
-        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
-          <img src="/public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
-        </a>
-        <a href="https://wise.com/pay/me/pauld4498" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm mx-2">Donate via
-          <img src="/public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
-        </a>
+      
+      <!-- Updated Social Media Dropdown with Icons -->
+      <div class="dropdown social-dropdown d-lg-none ms-auto">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="socialDropdown" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Social Media
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="socialDropdown">
+          <li>
+            <a class="dropdown-item" href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank">
+              <img src="/public/images/icons/facebook.svg" alt="Facebook Icon" width="18" height="18" class="me-2" /> Facebook
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="https://www.instagram.com/trnsc.health/" target="_blank">
+              <img src="/public/images/icons/instagram.svg" alt="Instagram Icon" width="18" height="18" class="me-2" />
+              Instagram
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="https://www.threads.net/@trnsc.health" target="_blank">
+              <img src="/public/images/icons/threads-logo-black.svg" alt="Threads Icon" width="18" height="18" class="me-2" />
+              Threads
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="mailto:trnsc.health@gmail.com" target="_blank">
+              <img src="/public/images/icons/email.svg" alt="Email Icon" width="18" height="18" class="me-2" /> Email
+            </a>
+          </li>
+        </ul>
       </div>
+
     </div>
   </div>
 </nav>
