--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -117,24 +117,24 @@
         </button>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="socialDropdown">
           <li>
-            <a class="dropdown-item" href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank">
+            <a class="dropdown-item" href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" rel="noopener">
               <img src="/public/images/icons/facebook.svg" alt="Facebook Icon" width="18" height="18" class="me-2" /> Facebook
             </a>
           </li>
           <li>
-            <a class="dropdown-item" href="https://www.instagram.com/trnsc.health/" target="_blank">
+            <a class="dropdown-item" href="https://www.instagram.com/trnsc.health/" target="_blank" rel="noopener">
               <img src="/public/images/icons/instagram.svg" alt="Instagram Icon" width="18" height="18" class="me-2" />
               Instagram
             </a>
           </li>
           <li>
-            <a class="dropdown-item" href="https://www.threads.net/@trnsc.health" target="_blank">
+            <a class="dropdown-item" href="https://www.threads.net/@trnsc.health" target="_blank" rel="noopener">
               <img src="/public/images/icons/threads-logo-black.svg" alt="Threads Icon" width="18" height="18" class="me-2" />
               Threads
             </a>
           </li>
           <li>
-            <a class="dropdown-item" href="mailto:trnsc.health@gmail.com" target="_blank">
+            <a class="dropdown-item" href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener">
               <img src="/public/images/icons/email.svg" alt="Email Icon" width="18" height="18" class="me-2" /> Email
             </a>
           </li>
