Swapped local links for official URL

--- a/views/layouts/healthy_tips/chip_olympics.html
+++ b/views/layouts/healthy_tips/chip_olympics.html
@@ -77,7 +77,7 @@
                             <li><strong>Type 2 Diabetes:</strong> Moderate portions recommended due to natural sugars, but fibre can
                                 help slow sugar absorption.</li>
                             <li><strong>Recipe Link:</strong> <a
-                                    href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/beetroot_chips.html">Beetroot
+                                    href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/beetroot_chips.html">Beetroot
                                     Chips</a></li>
                             <li><strong>Prep Time:</strong> 10 mins | <strong>Cook Time:</strong> 45 mins | <strong>Total
                                     Time:</strong> 55 mins</li>
@@ -104,7 +104,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Fibre helps with glucose management, but best in
                                     moderation.</li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/carrot_chips.html">Carrot
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/carrot_chips.html">Carrot
                                         Chips</a></li>
                                 <li><strong>Prep Time:</strong> 5 mins | <strong>Cook Time:</strong> 45 mins |
                                     <strong>Total Time:</strong> 50 mins</li>
@@ -131,7 +131,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Excellent alternative for low-carb diets due to
                                     minimal impact on blood glucose.</li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/herb_crusted_entrecote.html">Celeriac
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/herb_crusted_entrecote.html">Celeriac
                                         Chips</a></li>
                                 <li><strong>Crunchy Level:</strong> 5/10 🥕</li>
                                 <li><strong>Ease of Cooking:</strong> 9/10 | <strong>Availability:</strong> 5/10 |
@@ -156,7 +156,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Lower glycaemic index than potatoes, so may be a
                                     better alternative in small servings.</li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/sweet_potato_crisps.html">Sweet
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/sweet_potato_crisps.html">Sweet
                                         Potato Chips</a></li>
                                 <li><strong>Prep Time:</strong> 15 mins | <strong>Cook Time:</strong> 1 hour 45 mins |
                                     <strong>Total Time:</strong> 2 hours</li>
@@ -183,7 +183,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Best consumed in moderation due to natural sugars; pairing with
                                     fibre-rich dips can help.</li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/index_search.html?query=chips">Parsnip
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/index_search.html?query=chips">Parsnip
                                         Chips</a></li>
                                 <li><strong>Prep Time:</strong> 10 mins | <strong>Cook Time:</strong> 30 mins | <strong>Total
                                         Time:</strong> 40 mins</li>
@@ -211,7 +211,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Low glycaemic impact; suitable for snacking in moderate portions.
                                 </li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/crispy_sweet_peas.html">Sugar
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/crispy_sweet_peas.html">Sugar
                                         Snap Pea Chips</a></li>
                                 <li><strong>Prep Time:</strong> 10 mins | <strong>Cook Time:</strong> 20 mins | <strong>Total
                                         Time:</strong> 30 mins</li>
@@ -238,7 +238,7 @@
                                 <li><strong>Type 2 Diabetes:</strong> Low glycaemic impact due to high protein and fibre, making it a
                                     filling snack option.</li>
                                 <li><strong>Recipe Link:</strong> <a
-                                        href="http://127.0.0.1:5500/views/layouts/recipes/recipe_pages/nacho_chips.html">Quinoa and
+                                        href="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/nacho_chips.html">Quinoa and
                                         Chickpea Flour Chips</a></li>
                                 <li><strong>Prep Time:</strong> 15 mins | <strong>Cook Time:</strong> 12 mins | <strong>Total
                                         Time:</strong> 27 mins</li>
