--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -11,7 +11,7 @@
 
       <!-- Social Media Icons -->
       <div class="col-md-4 mb-4">
-        <h6 class="text-uppercase mb-4">Follow Us</h6>
+        <h6 class="text-uppercase mb-4 text-center">Follow Us</h6>
         <div class="d-flex justify-content-center social-icons ms-auto">
           <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" class="social-icon mx-2">
             <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
