Bluesky link and svg

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -22,6 +22,10 @@
           <a href="https://www.threads.net/@trnsc.health" class="social-icon mx-2">
             <img src="/public/images/icons/threads-logo-black.svg" alt="Threads" width="24" height="24" />
           </a>
+          <a href="https://bsky.app/profile/naked-swedish-chef.bsky.social" target="_blank" rel="noopener"
+            class="social-icon mx-2">
+            <img src="/public/images/icons/bluesky.svg" alt="Threads" width="24" height="24" />
+          </a>
           <a href="mailto:trnsc.health@gmail.com" class="social-icon mx-2">
             <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
           </a>
