--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -104,6 +104,9 @@
         <a href="https://www.threads.net/@trnsc.health" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/threads-logo-black.svg" alt="Threads" width="24" height="24" />
         </a>
+        <a href="https://bsky.app/profile/naked-swedish-chef.bsky.social" target="_blank" rel="noopener" class="social-icon mx-2">
+          <img src="/public/images/icons/bluesky.svg" alt="Threads" width="24" height="24" />
+        </a>
         <a href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
         </a>
@@ -131,6 +134,12 @@
             <a class="dropdown-item" href="https://www.threads.net/@trnsc.health" target="_blank" rel="noopener">
               <img src="/public/images/icons/threads-logo-black.svg" alt="Threads Icon" width="18" height="18" class="me-2" />
               Threads
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="https://bsky.app/profile/naked-swedish-chef.bsky.social" target="_blank" rel="noopener">
+              <img src="/public/images/icons/bluesky.svg" alt="BLuesky Icon" width="18" height="18" class="me-2" />
+              Bluesky
             </a>
           </li>
           <li>
