Updated alts for Bluesky

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -105,7 +105,7 @@
           <img src="/public/images/icons/threads-logo-black.svg" alt="Threads" width="24" height="24" />
         </a>
         <a href="https://bsky.app/profile/naked-swedish-chef.bsky.social" target="_blank" rel="noopener" class="social-icon mx-2">
-          <img src="/public/images/icons/bluesky.svg" alt="Threads" width="24" height="24" />
+          <img src="/public/images/icons/bluesky.svg" alt="Bluesky" width="24" height="24" />
         </a>
         <a href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
@@ -138,7 +138,7 @@
           </li>
           <li>
             <a class="dropdown-item" href="https://bsky.app/profile/naked-swedish-chef.bsky.social" target="_blank" rel="noopener">
-              <img src="/public/images/icons/bluesky.svg" alt="BLuesky Icon" width="18" height="18" class="me-2" />
+              <img src="/public/images/icons/bluesky.svg" alt="Bluesky Icon" width="18" height="18" class="me-2" />
               Bluesky
             </a>
           </li>
